stop titlerow from overlapping border of widget

--- a/app/assets/stylesheets/nonprofits/donation_form/title_row.scss
+++ b/app/assets/stylesheets/nonprofits/donation_form/title_row.scss
@@ -8,6 +8,7 @@
 	background: $fog;
 	display: flex;
 	gap: 15px;
+	@include border-radius(3px 3px 0 0);
 }
 .titleRow-info {
 	max-width: 85%;
